Opening text update

--- a/mc/index.html
+++ b/mc/index.html
@@ -29,7 +29,7 @@
             <section>
                 <h3>Setup suggestions</h3>
                 <ul class="simple-list">
-                    <li class="simple-list-item">Select your heroes and villain first, all other lists will auto-filter based on your choices.</li>
+                    <li class="simple-list-item">Select your module, aspect, heroes and villain first, all other lists will auto-filter based on your choices.</li>
                     <li class="simple-list-item">The "Add From List" page also allows you to select your chosen modular content and aspect, which will further reduce the list.</li>
                     <li class="simple-list-item">You can quickly hide and show cards here on this main page, so you may wish to add all your allies and side schemes, then hide them so you can quickly show them as they come into play.</li>
                     <li class="simple-list-item">Tap the 'H' on a card after adding it to hide it. Hidden cards will appear at the bottom of this page.</li>
