Buy me a coffee

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1>Games With Tony<img src="images/cardsavatar.png" class="avatar" /></h1>
-    <p style="margin-top: 1rem;">Welcome! Below you will find a list of my digital apps and physical variants for board gaming, mostly for solo play. Nothing to print, ever.</p>
+    <p style="margin-top: 1rem;">Welcome! Below you will find a list of my digital apps and physical variants for board gaming, mostly for solo play. If you enjoy my work, feel free to <a href="https://www.buymeacoffee.com/tonyalicea">buy me a coffee</a>.</p>
     <h2>Online Helpers</h2>
     <p><a href="/eliza"><strong>Brass: Birmingham</strong> Online Solo Opponents (beta)</a></p>
     <p class="small">A complete solution for playing Brass: Birmingham solo, with no AI to learn! Simply tell the app what moves you are making and the app tells you what the AI does. Play a 2 or 3-player game!</p>
