--- a/stadice/index.html
+++ b/stadice/index.html
@@ -1,59 +1,124 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="cache-control" content="max-age=0" />
-    <meta http-equiv="cache-control" content="no-cache" />
-    <meta http-equiv="expires" content="0" />
-    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-    <meta http-equiv="pragma" content="no-cache" />
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <title>Star Trek Adventures Dice Roller</title>
+<title>Star Trek Adventures Dice Roller</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="format-detection" content="telephone=no">
+<meta name="format-detection" content="date=no">
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+<link rel="stylesheet" type="text/css" href="lcars-classic.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Antonio:wght@400;700&display=swap" rel="stylesheet">
 </head>
+<body id="stretch">
+<div class="wrap">
+	<div class="scroll-top">
+		<a id="scroll-top" href=""><span class="hop">screen</span> top</a>
+	</div>
+	<div class="left-frame-top">
+		<div class="panel-1"><a href="">LCARS</a></div>
+		<div class="panel-2">02<span class="hop">-262000</span></div>
+	</div>
+	<div class="right-frame-top">
+		<div class="banner">
+			LCARS &#149; Online
+		</div>
+				<div class="data-cascade-button-group">
+				<div class="cascade-wrapper">
+					<div class="data-cascade">
+						<div class="row-1"><div class="dc1">101</div><div class="dc2">7109</div><div class="dc3">1966</div><div class="dc4">1222</div><div class="dc5">2020</div><div class="dc6">1444</div><div class="dc7">102</div><div class="dc8">1103</div><div class="dc9">1935</div><div class="dc10">1940</div><div class="dc11">708</div><div class="dc12">M113</div><div class="dc13">1956</div><div class="dc14">1209</div></div><div class="row-2"><div class="dc1">102</div><div class="dc2">8102</div><div class="dc3">1987</div><div class="dc4">044</div><div class="dc5">0051</div><div class="dc6">607</div><div class="dc7">1976</div><div class="dc8">1031</div><div class="dc9">1984</div><div class="dc10">1954</div><div class="dc11">1103</div><div class="dc12">415</div><div class="dc13">1045</div><div class="dc14">1864</div></div><div class="row-3"><div class="dc1">103</div><div class="dc2">714</div><div class="dc3">1993</div><div class="dc4">0222</div><div class="dc5">052</div><div class="dc6">1968</div><div class="dc7">2450</div><div class="dc8">746</div><div class="dc9">56</div><div class="dc10">47</div><div class="dc11">716</div><div class="dc12">8719</div><div class="dc13">417</div><div class="dc14">602</div></div><div class="row-4"><div class="dc1">104</div><div class="dc2">6104</div><div class="dc3">1995</div><div class="dc4">322</div><div class="dc5">90</div><div class="dc6">1931</div><div class="dc7">1701</div><div class="dc8">51</div><div class="dc9">29</div><div class="dc10">218</div><div class="dc11">908</div><div class="dc12">2114</div><div class="dc13">85</div><div class="dc14">3504</div></div><div class="row-5"><div class="dc1">105</div><div class="dc2">08</div><div class="dc3">2001</div><div class="dc4">713</div><div class="dc5">079</div><div class="dc6">1940</div><div class="dc7">LV</div><div class="dc8">426</div><div class="dc9">105</div><div class="dc10">10</div><div class="dc11">1206</div><div class="dc12">1979</div><div class="dc13">402</div><div class="dc14">795</div></div><div class="row-6"><div class="dc1">106</div><div class="dc2">31</div><div class="dc3">2017</div><div class="dc4">429</div><div class="dc5">65</div><div class="dc6">871</div><div class="dc7">1031</div><div class="dc8">541</div><div class="dc9">656</div><div class="dc10">764</div><div class="dc11">88</div><div class="dc12">001</div><div class="dc13">27</div><div class="dc14">05</div></div>
+					</div> 
+				</div> <!-- /cascade-wrapper -->
+                <div class="msd">
+                    <img src="images/USS_Sierra_Nevada_MSD.png" />
+                </div>
+			</div> <!-- /data-cascade-button-group -->
+		<div class="top-corner-bg">
+			<div class="top-corner"></div>
+		</div>
+		<div class="bar-panel">
+		<div class="bar-1"></div>
+		<div class="bar-2"></div>
+		<div class="bar-3"></div>
+		<div class="bar-4"></div>
+		<div class="bar-5"></div>
+		</div>
+	</div> <!-- /left-frame-top -->
+</div> <!-- /wrap -->
+<div class="wrap" id="gap">
+	<div class="left-frame">
+		<div>
+			<div class="panel-3">03<span class="hop">-111968</span></div>
+			<div class="panel-4">04<span class="hop">-041969</span></div>
+			<div class="panel-5">05<span class="hop">-1701D</span></div>
+			<div class="panel-6">06<span class="hop">-071984</span></div>
+			<div class="panel-7">07<span class="hop">-081940</span></div>
+			<div class="panel-8">08<span class="hop">-47148</span></div>
+			<div class="panel-9">09<span class="hop">-081966</span></div>
+		</div>
+		<div>
+			<div class="panel-10">10<span class="hop">-31</span></div>
+		</div>
+	</div>
+	<div class="right-frame">
+		<div class="bar-panel">
+		<div class="bar-6"></div>
+		<div class="bar-7"></div>
+		<div class="bar-8"></div>
+		<div class="bar-9"></div>
+		<div class="bar-10"></div>
+		</div>
+		<div class="corner-bg">
+			<div class="corner"></div>
+		</div>
+		<div class="content">
 
-<body>
-    <main id="stadice">
-        <section id="buttons">
-            <section id="dice">
-                <ul class="dice-container">
-                    <li class="die-list" v-for="die in activeDice" :key="die.id">
-                        <div class="die die--black" v-bind:class="{ dieWhite: die.color === 0, dieBlack: die.color === 1 }">{{ die.currentValue }}</div>
-                    </li>
-                </ul>
-            </section>
-            <ul class="dice-buttons">
-                <li class="dice-button-container total-rolls">
-                    <span class="total-rolls-detail" v-if="totalRolls > 0">Roll #{{ totalRolls }}</span>
+			<h2>USS Sierra Nevada</h2>
+
+            <ul class="dice-container">
+                <li class="die-list" v-for="die in activeDice" :key="die.id">
+                    <div class="die die--black" v-bind:class="{ dieWhite: die.color === 0, dieBlack: die.color === 1 }">{{ die.currentValue }}</div>
                 </li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll1d20">1d20</button>
-                </li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll2d20">2d20</button>
-                </li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll3d20">3d20</button>
-                </li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll4d20">4d20</button>
-                </li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll5d20">5d20</button>
-                </li>
-                <li class="separator"></li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll1d6">1d6</button></li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll2d6">2d6</button></li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll3d6">3d6</button></li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll4d6">4d6</button></li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll5d6">5d6</button></li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll6d6">6d6</button></li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll7d6">7d6</button></li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll8d6">8d6</button></li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll9d6">9d6</button></li>
-                <li class="dice-button-container"><button class="dice-button" v-on:click="roll10d6">10d6</button></li>
-                <li class="separator"></li>
             </ul>
-        </section>
-    </main>
+			
+			<div class="buttons">
+                <a v-on:click="roll1d20">1d20</a>
+                <a class="sunflower" v-on:click="roll2d20">2d20</a>
+                <a class="bluey" v-on:click="roll3d20">3d20</a>
+                <a class="yellow" v-on:click="roll4d20">4d20</a>
+                <a class="red" v-on:click="roll5d20">5d20</a>
+            </div>
+            <div class="lcars-text-bar the-end">
+                <span>Challenge Dice</span>
+            </div>
+            <div class="buttons">
+                <a v-on:click="roll1d6">1d6</a>
+                <a class="sunflower" v-on:click="roll2d6">2d6</a>
+                <a class="bluey" v-on:click="roll3d6">3d6</a>
+                <a class="yellow" v-on:click="roll4d6">4d6</a>
+                <a class="red" v-on:click="roll5d6">5d6</a>
+                <a v-on:click="roll6d6">6d6</a>
+                <a class="sunflower" v-on:click="roll7d6">7d6</a>
+                <a class="bluey" v-on:click="roll8d6">8d6</a>
+                <a class="yellow" v-on:click="roll9d6">9d6</a>
+                <a class="red" v-on:click="roll10d6">10d6</a>
+            </div>
+
+			<footer>
+				<div class="footer-inside">
+					<div class="footer-text">
+						<p>USS Sierra Nevada</p>
+                        <p>Tony Alicea | Benjamin Cain | Matthan Crocevera | David Solomon | Talmon Villareal</p>
+					</div>
+				</div>
+				<div class="footer-panel">
+					<span class="hop">22</span>47
+				</div>
+			</footer>			
+		</div>
+	</div>
+</div>
 </body>
 <script src="app.js"></script>
 </html>
