--- a/stadice/index.html
+++ b/stadice/index.html
@@ -32,11 +32,11 @@
 				<div class="data-cascade-button-group">
 				<div class="cascade-wrapper">
 					<div class="data-cascade">
-						<div class="row-1"><div class="dc1">101</div><div class="dc2">7109</div><div class="dc3">1966</div><div class="dc4">1222</div><div class="dc5">2020</div><div class="dc6">1444</div><div class="dc7">102</div><div class="dc8">1103</div><div class="dc9">1935</div><div class="dc10">1940</div><div class="dc11">708</div><div class="dc12">M113</div><div class="dc13">1956</div><div class="dc14">1209</div></div><div class="row-2"><div class="dc1">102</div><div class="dc2">8102</div><div class="dc3">CROC</div><div class="dc4">044</div><div class="dc5">0051</div><div class="dc6">607</div><div class="dc7">1976</div><div class="dc8">1031</div><div class="dc9">1984</div><div class="dc10">1954</div><div class="dc11">1103</div><div class="dc12">415</div><div class="dc13">1045</div><div class="dc14">1864</div></div><div class="row-3"><div class="dc1">103</div><div class="dc2">714</div><div class="dc3">1993</div><div class="dc4">0222</div><div class="dc5">052</div><div class="dc6">1968</div><div class="dc7">2450</div><div class="dc8">746</div><div class="dc9">56</div><div class="dc10">47</div><div class="dc11">716</div><div class="dc12">ALIC</div><div class="dc13">417</div><div class="dc14">602</div></div><div class="row-4"><div class="dc1">104</div><div class="dc2">CAIN</div><div class="dc3">1995</div><div class="dc4">322</div><div class="dc5">90</div><div class="dc6">1931</div><div class="dc7">SOLO</div><div class="dc8">51</div><div class="dc9">29</div><div class="dc10">218</div><div class="dc11">908</div><div class="dc12">2114</div><div class="dc13">85</div><div class="dc14">3504</div></div><div class="row-5"><div class="dc1">105</div><div class="dc2">08</div><div class="dc3">2001</div><div class="dc4">713</div><div class="dc5">079</div><div class="dc6">1940</div><div class="dc7">LV</div><div class="dc8">426</div><div class="dc9">105</div><div class="dc10">10</div><div class="dc11">VILL</div><div class="dc12">1979</div><div class="dc13">402</div><div class="dc14">795</div></div><div class="row-6"><div class="dc1">106</div><div class="dc2">31</div><div class="dc3">2017</div><div class="dc4">429</div><div class="dc5">65</div><div class="dc6">871</div><div class="dc7">1031</div><div class="dc8">541</div><div class="dc9">656</div><div class="dc10">764</div><div class="dc11">88</div><div class="dc12">001</div><div class="dc13">27</div><div class="dc14">05</div></div>
+						<div class="row-1"><div class="dc1">101</div><div class="dc2">7109</div><div class="dc3">1966</div><div class="dc4">1222</div><div class="dc5">2020</div><div class="dc6">1444</div><div class="dc7">102</div><div class="dc8">1103</div><div class="dc9">1935</div><div class="dc10">1940</div><div class="dc11">708</div><div class="dc12">M113</div><div class="dc13">1956</div><div class="dc14">1209</div></div><div class="row-2"><div class="dc1">102</div><div class="dc2">8102</div><div class="dc3">1987</div><div class="dc4">044</div><div class="dc5">0051</div><div class="dc6">607</div><div class="dc7">1976</div><div class="dc8">1031</div><div class="dc9">1984</div><div class="dc10">1954</div><div class="dc11">1103</div><div class="dc12">415</div><div class="dc13">1045</div><div class="dc14">1864</div></div><div class="row-3"><div class="dc1">103</div><div class="dc2">714</div><div class="dc3">1993</div><div class="dc4">0222</div><div class="dc5">052</div><div class="dc6">1968</div><div class="dc7">2450</div><div class="dc8">746</div><div class="dc9">56</div><div class="dc10">47</div><div class="dc11">716</div><div class="dc12">8719</div><div class="dc13">417</div><div class="dc14">602</div></div><div class="row-4"><div class="dc1">104</div><div class="dc2">6104</div><div class="dc3">1995</div><div class="dc4">322</div><div class="dc5">90</div><div class="dc6">1931</div><div class="dc7">1701</div><div class="dc8">51</div><div class="dc9">29</div><div class="dc10">218</div><div class="dc11">908</div><div class="dc12">2114</div><div class="dc13">85</div><div class="dc14">3504</div></div><div class="row-5"><div class="dc1">105</div><div class="dc2">08</div><div class="dc3">2001</div><div class="dc4">713</div><div class="dc5">079</div><div class="dc6">1940</div><div class="dc7">LV</div><div class="dc8">426</div><div class="dc9">105</div><div class="dc10">10</div><div class="dc11">1206</div><div class="dc12">1979</div><div class="dc13">402</div><div class="dc14">795</div></div><div class="row-6"><div class="dc1">106</div><div class="dc2">31</div><div class="dc3">2017</div><div class="dc4">429</div><div class="dc5">65</div><div class="dc6">871</div><div class="dc7">1031</div><div class="dc8">541</div><div class="dc9">656</div><div class="dc10">764</div><div class="dc11">88</div><div class="dc12">001</div><div class="dc13">27</div><div class="dc14">05</div></div>
 					</div> 
 				</div> <!-- /cascade-wrapper -->
                 <div class="msd">
-                    <img src="images/USS_Sierra_Nevada_MSD.png" />
+                    <img src="images/enterprise_msd.jpg" />
                 </div>
 			</div> <!-- /data-cascade-button-group -->
 		<div class="top-corner-bg">
@@ -79,7 +79,7 @@
 		</div>
 		<div class="content">
 
-			<h2>USS Sierra Nevada</h2>
+			<h2>Randomization Module</h2>
 
             <ul class="dice-container">
                 <li class="die-list" v-for="die in activeDice" :key="die.id">
@@ -104,17 +104,16 @@
                 <a class="yellow" v-on:click="roll4d6">4d6</a>
                 <a class="red" v-on:click="roll5d6">5d6</a>
                 <a v-on:click="roll6d6">6d6</a>
-                <a class="sunflower" v-on:click="roll7d6">7d6</a>
-                <a class="bluey" v-on:click="roll8d6">8d6</a>
-                <a class="yellow" v-on:click="roll9d6">9d6</a>
-                <a class="red" v-on:click="roll10d6">10d6</a>
+                <a class="peach" v-on:click="roll7d6">7d6</a>
+                <a class="african-violet" v-on:click="roll8d6">8d6</a>
+                <a class="almond-creme" v-on:click="roll9d6">9d6</a>
+                <a class="mars" v-on:click="roll10d6">10d6</a>
             </div>
 
 			<footer>
 				<div class="footer-inside">
 					<div class="footer-text">
-						<p>USS Sierra Nevada</p>
-                        <p>Tony Alicea | Benjamin Cain | Matthan Crocevera | David Solomon | Talmon Villareal</p>
+						<p><a href="https://gameswithtony.com">Games With Tony</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://thelcars.com">LCARS Theme</a></p>
 					</div>
 				</div>
 				<div class="footer-panel">
